--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,16 @@
 {
-    "name": "burgov/key-value-form-bundle",
+    "name": "scc/key-value-form-bundle",
     "license": "MIT",
     "type": "bundle",
     "description": "A form type for managing key-value pairs",
     "autoload": {
-        "psr-4": { "Burgov\\Bundle\\KeyValueFormBundle\\": "" }
+        "psr-4": { "Scc\\KeyValueFormBundle\\": "" }
     },
     "require": {
-        "php": ">=5.3.3",
-        "symfony/form": "^2.3|^3.0|^4.0|^5.0"
+        "php": "^8.2",
+        "symfony/form": "^6.3"
     },
     "conflict": {
-        "symfony/form": "2.8.1"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.1-dev"
-        }
+        "symfony/symfony": "*"
     }
-
 }
