feat: add SF 7.x

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     },
     "require": {
         "php": "^8.2",
-        "symfony/form": "^6.3"
+        "symfony/form": "^6.3||^7.0"
     },
     "conflict": {
         "symfony/symfony": "*"
